; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_machine-image.c_image_from_path.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_machine-image.c_image_from_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c".host\00", align 1
@AT_FDCWD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @image_from_path(i8* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i64 @path_equal(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* @AT_FDCWD, align 4
  %11 = load i32**, i32*** %5, align 8
  %12 = call i32 @image_make(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %10, i32* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* null, i32** %11)
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @AT_FDCWD, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load i32**, i32*** %5, align 8
  %17 = call i32 @image_make(i8* null, i32 %14, i32* null, i8* %15, i32* null, i32** %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @path_equal(i8*, i8*) #1

declare dso_local i32 @image_make(i8*, i32, i32*, i8*, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
